clusters/aks-dev-elemam-02/workloads/services/kiali/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kiali-server
  labels:
    istio-injection: enabled
