clusters/aks-dev-elemam-02/workloads/services/kiali/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: kiali-gateway-ext
  namespace: istio-system
spec:
  selector:
    app: istio-ingressgateway
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: star-test-elemamm-developers-global-io
    hosts:
    - "kiali.test.elemamm.developers.global.io"
